<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/saleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:text="Button"
        app:layout_constraintBottom_toBottomOf="@+id/saleTextView"
        app:layout_constraintStart_toEndOf="@+id/saleTextView"
        app:layout_constraintTop_toTopOf="@+id/saleTextView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <TextView
        android:id="@+id/saleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userProfileButton" />

    <Button
        android:id="@+id/goToShoppingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="Shop"
        app:layout_constraintEnd_toEndOf="@+id/saleButton"
        app:layout_constraintStart_toStartOf="@+id/saleButton"
        app:layout_constraintTop_toBottomOf="@+id/saleButton" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="76dp"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toTopOf="@+id/saleButton"
        app:layout_constraintEnd_toEndOf="@+id/saleButton"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="@+id/saleButton"
        app:layout_constraintTop_toBottomOf="@+id/userProfileButton"
        app:srcCompat="@android:drawable/sym_action_call"
        tools:srcCompat="@android:drawable/sym_action_call" />

    <ImageView
        android:id="@+id/userProfileButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="28dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_myplaces" />

    <TextView
        android:id="@+id/textViewUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        app:layout_constraintBottom_toTopOf="@+id/saleTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonRecyclerViewPractice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="RecyclerView Practice"
        app:layout_constraintEnd_toEndOf="@+id/goToShoppingButton"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="@+id/goToShoppingButton"
        app:layout_constraintTop_toBottomOf="@+id/goToShoppingButton" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/skateboardRecyclerView2"
        android:layout_width="165dp"
        android:layout_height="293dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonRecyclerViewPractice" />

</androidx.constraintlayout.widget.ConstraintLayout>