<resources>
    <string name="app_name">BuyExpensiveThings</string>
    <string name="title_activity_order_form">OrderForm</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="productName">Product</string>
    <string name="address">Address</string>
    <string name="add_item_to_cart">Add Item to Cart</string>
    <string name="buy_item">Buy Item</string>
    <string name="price">Price</string>
</resources>